Updated index file

--- a/index.html
+++ b/index.html
@@ -3,13 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Treact</title>
 </head>
 <body>
-    <nav>
-        <div>
-            
-        </div>
-    </nav>
+    <section id="home__page">
+        <nav class="nav">
+            <div class="row">
+                <a href="#">
+                    <img class="logo" src="#" alt="logo"> Treact
+                </a>
+                <ul class="nav__links">
+                    <li>
+                        <a class="nav__link" href="#">About</a>
+                    </li>
+                    <li>
+                        <a class="nav__link" href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a class="nav__link" href="#">Pricing</a>
+                    </li>
+                    <li>
+                        <a class="nav__link" href="#">Contact Us</a>
+                    </li>
+                    <li>
+                        <a class="nav__link" href="#">Login</a>
+                    </li>
+                    <li>
+                        <a class="nav__link" href="#">Contact Us</a>
+                    </li>
+                </ul>
+                <button class="btn__menu" onclick="openMenu()">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </nav>
+    </section>
+    <section>
+        
+    </section>
+    <section>
+
+    </section>
+    <section>
+
+    </section>
+    <section>
+
+    </section>
+    <section>
+
+    </section>
+    <section>
+
+    </section>
 </body>
 </html>
