--- a/index.html
+++ b/index.html
@@ -8,53 +8,57 @@
 </head>
 <body>
     <section id="home__page">
-        <nav class="nav">
-            <div class="row">
-                <a href="#">
-                    <img class="logo" src="#" alt="logo"> Treact
-                </a>
-                <ul class="nav__links">
-                    <li>
-                        <a class="nav__link" href="#">About</a>
-                    </li>
-                    <li>
-                        <a class="nav__link" href="#">Blog</a>
-                    </li>
-                    <li>
-                        <a class="nav__link" href="#">Pricing</a>
-                    </li>
-                    <li>
-                        <a class="nav__link" href="#">Contact Us</a>
-                    </li>
-                    <li>
-                        <a class="nav__link" href="#">Login</a>
-                    </li>
-                    <li>
-                        <a class="nav__link" href="#">Contact Us</a>
-                    </li>
-                </ul>
-                <button class="btn__menu" onclick="openMenu()">
-                    <i class="fas fa-bars"></i>
-                </button>
-            </div>
-        </nav>
+        <div class="app">
+            <nav class="nav">
+                <div class="row">
+                    <a class="logo__link" href="#">
+                        <img class="logo" src="https://treact.owaiskhan.me/static/media/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="logo"> Treact 
+                    </a>
+                    <ul class="nav__links">
+                        <li>
+                            <a class="nav__link" href="#about">About</a>
+                        </li>
+                        <li>
+                            <a class="nav__link" href="#blog">Blog</a>
+                        </li>
+                        <li>
+                            <a class="nav__link" href="#pricing">Pricing</a>
+                        </li>
+                        <li>
+                            <a class="nav__link" href="#contact">Contact Us</a>
+                        </li>
+                        <li>
+                            <a class="nav__link" href="#">Login</a>
+                        </li>
+                        <li>
+                            <a class="nav__link sign--up" href="#">Sign Up</a>
+                        </li>
+                    </ul>
+                    <!-- <button class="btn__menu" onclick="openMenu()">
+                        <i class="fas fa-bars"></i>
+                    </button> -->
+                </div>
+            </nav>
+        </div>
     </section>
-    <section>
-        
+    <section id="">
+        <div>
+
+        </div>
     </section>
-    <section>
+    <section id="">
 
     </section>
-    <section>
+    <section id="">
 
     </section>
-    <section>
+    <section id="">
 
     </section>
-    <section>
+    <section id="">
 
     </section>
-    <section>
+    <section id="">
 
     </section>
 </body>
