--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
                     </a>
                     <ul class="nav__links">
                         <li>
-                            <a class="nav__link" href="#about">About</a>
+                            <a class="nav__link link__hover-effect" href="#about">About</a>
                         </li>
                         <li>
-                            <a class="nav__link" href="#blog">Blog</a>
+                            <a class="nav__link link__hover-effect" href="#blog">Blog</a>
                         </li>
                         <li>
-                            <a class="nav__link" href="#pricing">Pricing</a>
+                            <a class="nav__link link__hover-effect" href="#pricing">Pricing</a>
                         </li>
                         <li>
-                            <a class="nav__link" href="#contact">Contact Us</a>
+                            <a class="nav__link link__hover-effect" href="#contact">Contact Us</a>
                         </li>
                         <li>
-                            <a class="nav__link" href="#">Login</a>
+                            <a class="nav__link link__hover-effect" href="#">Login</a>
                         </li>
                         <li>
                             <a class="nav__link sign--up" href="#">Sign Up</a>
