Updated index file

--- a/index.html
+++ b/index.html
@@ -42,24 +42,34 @@
         </div>
     </section>
     <section id="">
+        <div class="">
+
+        </div>
+    </section>
+    <section id="">
+        <div class="">
+
+        </div>
+    </section>
+    <section id="">
+        <div class="">
+
+        </div>
+    </section>
+    <section id="">
         <div>
 
         </div>
     </section>
     <section id="">
+        <div class="">
 
+        </div>
     </section>
     <section id="">
-
-    </section>
-    <section id="">
-
-    </section>
-    <section id="">
-
-    </section>
-    <section id="">
-
+        <div class="">
+            
+        </div>
     </section>
 </body>
 </html>
