--- a/index.html
+++ b/index.html
@@ -34,11 +34,29 @@
                             <a class="nav__link sign--up" href="#">Sign Up</a>
                         </li>
                     </ul>
-                    <!-- <button class="btn__menu" onclick="openMenu()">
-                        <i class="fas fa-bars"></i>
-                    </button> -->
                 </div>
             </nav>
+            <div class="container">
+                <div class="row">
+                    <h1>
+                        Beautiful React Templates <span class="purple">for you.</span>
+                    </h1>
+                    <p class="">
+                        Our templates are easy to setup, understand and customize. 
+                        Fully modular components with a variety of pages and components.
+                    </p>
+                    <div class="">
+                        <input type="text" placeholder="Your Email Adress">
+                        <button class="">Get Started</button>
+                    </div>
+                    <div class="">
+                        <p class="">
+                            Our Trusted Customer
+                        </p>
+                        <img class="" src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="customer-logo">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section id="">
