--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section id="home__page">
         <div class="app">
             <nav class="nav">
-                <div class="row">
+                <div class="row__nav">
                     <a class="logo__link" href="#">
                         <img class="logo" src="https://treact.owaiskhan.me/static/media/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="logo"> Treact 
                     </a>
@@ -36,24 +36,26 @@
                     </ul>
                 </div>
             </nav>
-            <div class="container">
-                <div class="row">
-                    <h1>
-                        Beautiful React Templates <span class="purple">for you.</span>
-                    </h1>
-                    <p class="">
-                        Our templates are easy to setup, understand and customize. 
-                        Fully modular components with a variety of pages and components.
-                    </p>
-                    <div class="">
-                        <input type="text" placeholder="Your Email Adress">
-                        <button class="">Get Started</button>
-                    </div>
-                    <div class="">
-                        <p class="">
-                            Our Trusted Customer
+            <div class="TwoColumnWithInput__container">
+                <div class="TwoColumnWithInput__LeftColumn">
+                    <div class="TwoColumnWithInput__Row">
+                        <h1 class="TwoColumnWithInput__Title">
+                            Beautiful React Templates <span class="purple">for you.</span>
+                        </h1>
+                        <p class="TwoColumnWithInput__text">
+                            Our templates are easy to setup, understand and customize. 
+                            Fully modular components with a variety of pages and components.
                         </p>
-                        <img class="" src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="customer-logo">
+                        <div class="TwoColumnWithInput__">
+                            <input class="TwoColumnWithInput__input__btn" type="text" placeholder="Your Email Adress">
+                            <button class="TwoColumnWithInput__btn">Get Started</button>
+                        </div>
+                        <div class="">
+                            <p class="">
+                                Our Trusted Customer
+                            </p>
+                            <img class="" src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="customer-logo">
+                        </div>
                     </div>
                 </div>
             </div>
