--- a/index.html
+++ b/index.html
@@ -46,15 +46,20 @@
                             Our templates are easy to setup, understand and customize. 
                             Fully modular components with a variety of pages and components.
                         </p>
-                        <div class="TwoColumnWithInput__">
+                        <div class="TwoColumnWithInput__bttn">
                             <input class="TwoColumnWithInput__input__btn" type="text" placeholder="Your Email Adress">
                             <button class="TwoColumnWithInput__btn">Get Started</button>
                         </div>
                         <div class="">
-                            <p class="">
+                            <p class="text">
                                 Our Trusted Customer
                             </p>
-                            <img class="" src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="customer-logo">
+                            <img class="img__logo" src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="customer-logo">
+                        </div>
+                    </div>
+                    <div class="rightcolumn">
+                        <div class="illustrationcolumn">
+                            <img class="RightColumn__img" src="https://treact.owaiskhan.me/static/media/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt="illustration image">
                         </div>
                     </div>
                 </div>
