Updated index file

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </ul>
                 </div>
             </nav>
-            <div class="TwoColumnWithInput__container">
+            <!-- <div class="TwoColumnWithInput__container">
                 <div class="TwoColumnWithInput__LeftColumn">
                     <div class="TwoColumnWithInput__Row">
                         <h1 class="TwoColumnWithInput__Title">
@@ -63,8 +63,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+            </div>-->
+        </div> 
     </section>
     <section id="">
         <div class="">
