--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="./index.js"></script>
+    <link rel="stylesheet" href="./style.css" type="text/css">
+    <script defer src="./index.js"></script>
     <title>Treact</title>
 </head>
 <body>
@@ -37,7 +37,7 @@
                     </ul>
                 </div>
             </nav>
-            <!-- <div class="TwoColumnWithInput__container">
+            <div class="TwoColumnWithInput__container">
                 <div class="TwoColumnWithInput__LeftColumn">
                     <div class="TwoColumnWithInput__Row">
                         <h1 class="TwoColumnWithInput__Title">
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                 </div>
-            </div>-->
+            </div>
         </div> 
     </section>
     <section id="">
