Updated html file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <script defer src="./index.js"></script>
     <title>Treact</title>
 </head>
@@ -32,7 +32,7 @@
                             <a class="nav__link link__hover-effect" href="#">Login</a>
                         </li>
                         <li>
-                            <a class="nav__link sign--up" href="#">Sign Up</a>
+                            <a class="nav__link sign--up" href="#"><button class="nav__link--signup--btn">Sign Up</button></a>
                         </li>
                     </ul>
                 </div>
