--- a/index.html
+++ b/index.html
@@ -37,25 +37,27 @@
                     </ul>
                 </div>
             </nav>
-            <div class="TwoColumnWithInput__container">
-                <div class="TwoColumnWithInput__LeftColumn">
-                    <div class="TwoColumnWithInput__Row">
-                        <h1 class="TwoColumnWithInput__Title">
-                            Beautiful React Templates <span class="purple">for you.</span>
-                        </h1>
-                        <p class="TwoColumnWithInput__text">
-                            Our templates are easy to setup, understand and customize. 
-                            Fully modular components with a variety of pages and components.
-                        </p>
-                        <div class="TwoColumnWithInput__bttn">
-                            <input class="TwoColumnWithInput__input__btn" type="text" placeholder="Your Email Adress">
-                            <button class="TwoColumnWithInput__btn">Get Started</button>
-                        </div>
-                        <div class="">
-                            <p class="text">
-                                Our Trusted Customer
+            <div class="container">
+                <div class="full__container">
+                    <div class="leftcolumn__container">
+                        <div class="leftcolumn">
+                            <h1 class="title">
+                                Beautiful React Templates <span class="purple">for you.</span>
+                            </h1>
+                            <p class="TwoColumnWithInput__text">
+                                Our templates are easy to setup, understand and customize. 
+                                Fully modular components with a variety of pages and components.
                             </p>
-                            <img class="img__logo" src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="customer-logo">
+                            <div class="TwoColumnWithInput__bttn">
+                                <input class="TwoColumnWithInput__input__btn" type="text" placeholder="Your Email Adress">
+                                <button class="TwoColumnWithInput__btn" type="button">Get Started</button>
+                            </div>
+                            <div class="customer__logo">
+                                <p>
+                                    Our Trusted Customer
+                                </p>
+                                <img class="img__logo" src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="customer-logo">
+                            </div>
                         </div>
                     </div>
                     <div class="rightcolumn">
