Updated html file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </nav>
             <div class="container">
-                <div class="full__container">
+                <div class="row">
                     <div class="leftcolumn__container">
                         <div class="leftcolumn">
                             <h1 class="title">
@@ -48,9 +48,9 @@
                                 Our templates are easy to setup, understand and customize. 
                                 Fully modular components with a variety of pages and components.
                             </p>
-                            <div class="TwoColumnWithInput__bttn">
-                                <input class="TwoColumnWithInput__input__btn" type="text" placeholder="Your Email Adress">
-                                <button class="TwoColumnWithInput__btn" type="button">Get Started</button>
+                            <div class="btn">
+                                <input type="text" placeholder="Your Email Adress">
+                                <button type="button">Get Started</button>
                             </div>
                             <div class="customer__logo">
                                 <p>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="rightcolumn">
                         <div class="illustrationcolumn">
-                            <img class="RightColumn__img" src="https://treact.owaiskhan.me/static/media/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt="illustration image">
+                            <img class="rightColumn__img" src="https://treact.owaiskhan.me/static/media/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt="illustration image">
                         </div>
                     </div>
                 </div>
