Updated html file

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                                 Fully modular components with a variety of pages and components.
                             </p>
                             <div class="btn">
-                                <input type="text" placeholder="Your Email Adress">
-                                <button type="button">Get Started</button>
+                                <input class="input__btn" type="text" placeholder="Your Email Adress">
+                                <button class="btn__btn" type="button">Get Started</button>
                             </div>
                             <div class="customer__logo">
                                 <p>
