Updated html file

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <span class="landingpage__subheading">Features</span>
                 </h5>
                 <h2 class="image__heading">
-                    We have amazing.
+                    We have amazing
                     <span class="landingpage__highlighttext">Service.</span>
                 </h2>
                 <p class="image_description">
@@ -91,7 +91,7 @@
                         <img src="https://treact.owaiskhan.me/static/media/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
                     </span>
                     <span class="textcontainer">
-                        <span class="title">Secure</span>
+                        <span class="title">Secure VENTURI</span>
                         <p class="description">
                             We strictly only deal with vendors 
                             that provide top notch security.
@@ -140,10 +140,10 @@
 
                 <div class="sideimage__card">
                     <span class="imageContainer">
-                        <img src="	https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
+                        <img src="https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
                     </span>
                     <span class="textcontainer">
-                        <span class="title">Secure</span>
+                        <span class="title">Fast</span>
                         <p class="description">
                             We strictly only deal with vendors 
                             that provide top notch security.
@@ -153,13 +153,13 @@
 
                 <div class="sideimage__card">
                     <span class="imageContainer">
-                        <img src="" alt="">
+                        <img src="	https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
                     </span>
                     <span class="textcontainer">
-                        <span class="title">Secure</span>
+                        <span class="title">Easy</span>
                         <p class="description">
-                            We strictly only deal with vendors 
-                            that provide top notch security.
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Ipsum, consequatur obcaecati amet deleniti eos quod.
                         </p>
                     </span>
                 </div>
