--- a/index.html
+++ b/index.html
@@ -71,97 +71,99 @@
     </section>
     <section id="features">
         <div class="image__container">
-            <div class="sideImage__columncontainer">
-                <h5 class="image__subheading">
-                    <span class="landingpage__subheading">Features</span>
-                </h5>
-                <h2 class="image__heading">
-                    We have amazing
-                    <span class="landingpage__highlighttext">Service.</span>
-                </h2>
-                <p class="image_description">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus est repellendus minus 
-                    quisquam reprehenderit molestiae aperiam perferendis repudiandae temporibus molestias.
-                </p>
-            </div>
-            <div class="vertical__spacer"></div>
-            <div class="sideimage__column">
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
-                    </span>
-                    <span class="textcontainer">
-                        <span class="title">Secure VENTURI</span>
-                        <p class="description">
-                            We strictly only deal with vendors 
-                            that provide top notch security.
-                        </p>
-                    </span>
+            <div class="row__container">
+                <div class="sideImage__columncontainer">
+                    <h5 class="image__subheading">
+                        <span class="landingpage__subheading">Features</span>
+                    </h5>
+                    <h2 class="image__heading">
+                        We have amazing
+                        <span class="landingpage__highlighttext">Service.</span>
+                    </h2>
+                    <p class="image_description">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus est repellendus minus 
+                        quisquam reprehenderit molestiae aperiam perferendis repudiandae temporibus molestias.
+                    </p>
                 </div>
+                <div class="vertical__spacer"></div>
+                <div class="sideimage__column">
+                    <div class="sideimage__card">
+                        <span class="imageContainer">
+                            <img src="https://treact.owaiskhan.me/static/media/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
+                        </span>
+                        <span class="textcontainer">
+                            <span class="title">Secure</span>
+                            <p class="description">
+                                We strictly only deal with vendors 
+                                that provide top notch security.
+                            </p>
+                        </span>
+                    </div>
 
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
-                    </span>
-                    <span class="textcontainer">
-                        <span class="title">24/7 Support</span>
-                        <p class="description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Sit nulla quas necessitatibus consequatur iste impedit.
-                        </p>
-                    </span>
-                </div>
+                    <div class="sideimage__card">
+                        <span class="imageContainer">
+                            <img src="https://treact.owaiskhan.me/static/media/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
+                        </span>
+                        <span class="textcontainer">
+                            <span class="title">24/7 Support</span>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Sit nulla quas necessitatibus consequatur iste impedit.
+                            </p>
+                        </span>
+                    </div>
 
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="">
-                    </span>
-                    <span class="textcontainer">
-                        <span class="title">Customizable</span>
-                        <p class="description">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                            A harum eum temporibus fugit fugiat debitis.
-                        </p>
-                    </span>
-                </div>
+                    <div class="sideimage__card">
+                        <span class="imageContainer">
+                            <img src="https://treact.owaiskhan.me/static/media/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="">
+                        </span>
+                        <span class="textcontainer">
+                            <span class="title">Customizable</span>
+                            <p class="description">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                                A harum eum temporibus fugit fugiat debitis.
+                            </p>
+                        </span>
+                    </div>
 
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="">
-                    </span>
-                    <span class="textcontainer">
-                        <span class="title">Reliable</span>
-                        <p class="description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Accusamus alias quidem officiis recusandae iure cum!
-                        </p>
-                    </span>
-                </div>
+                    <div class="sideimage__card">
+                        <span class="imageContainer">
+                            <img src="https://treact.owaiskhan.me/static/media/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="">
+                        </span>
+                        <span class="textcontainer">
+                            <span class="title">Reliable</span>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Accusamus alias quidem officiis recusandae iure cum!
+                            </p>
+                        </span>
+                    </div>
 
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
-                    </span>
-                    <span class="textcontainer">
-                        <span class="title">Fast</span>
-                        <p class="description">
-                            We strictly only deal with vendors 
-                            that provide top notch security.
-                        </p>
-                    </span>
-                </div>
+                    <div class="sideimage__card">
+                        <span class="imageContainer">
+                            <img src="https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
+                        </span>
+                        <span class="textcontainer">
+                            <span class="title">Fast</span>
+                            <p class="description">
+                                We strictly only deal with vendors 
+                                that provide top notch security.
+                            </p>
+                        </span>
+                    </div>
 
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="	https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
-                    </span>
-                    <span class="textcontainer">
-                        <span class="title">Easy</span>
-                        <p class="description">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Ipsum, consequatur obcaecati amet deleniti eos quod.
-                        </p>
-                    </span>
+                    <div class="sideimage__card">
+                        <span class="imageContainer">
+                            <img src="	https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
+                        </span>
+                        <span class="textcontainer">
+                            <span class="title">Easy</span>
+                            <p class="description">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                Ipsum, consequatur obcaecati amet deleniti eos quod.
+                            </p>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
