Updated html file

--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
     </section>
     <section id="features">
         <div class="image__container">
-            <div class="row__container">
-                <div class="sideImage__columncontainer">
-                    <h5 class="image__subheading">
-                        <span class="landingpage__subheading">Features</span>
-                    </h5>
-                    <h2 class="image__heading">
-                        We have amazing
-                        <span class="landingpage__highlighttext">Service.</span>
-                    </h2>
-                    <p class="image_description">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus est repellendus minus 
-                        quisquam reprehenderit molestiae aperiam perferendis repudiandae temporibus molestias.
-                    </p>
-                </div>
-                <div class="vertical__spacer"></div>
+            <div class="sideImage__columncontainer">
+                <h5 class="image__subheading">
+                    <span class="landingpage__subheading">Features</span>
+                </h5>
+                <h2 class="image__heading">
+                    We have amazing
+                    <span class="purple">Service.</span>
+                </h2>
+                <p class="image_description">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus est repellendus minus 
+                    quisquam reprehenderit molestiae aperiam perferendis repudiandae temporibus molestias.
+                </p>
+            </div>
+            <div class="vertical__spacer"></div>
+            <div class="services">    
                 <div class="sideimage__column">
                     <div class="sideimage__card">
                         <span class="imageContainer">
@@ -99,7 +99,7 @@
                             </p>
                         </span>
                     </div>
-
+                    
                     <div class="sideimage__card">
                         <span class="imageContainer">
                             <img src="https://treact.owaiskhan.me/static/media/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
