Updated html file

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                 </div>
 
-                <div class="sideimage__card">
+                <!-- <div class="sideimage__card">
                     <span class="imageContainer">
                         <img src="https://treact.owaiskhan.me/static/media/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
                     </span>
@@ -162,7 +162,7 @@
                             Ipsum, consequatur obcaecati amet deleniti eos quod.
                         </p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
