Updated html file

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <span class="purple">Features</span>
                 </h5>
                 <h2 class="image__heading">
-                    We have amazing
+                    We have Amazing
                     <span class="purple">Service.</span>
                 </h2>
                 <p class="image_description">
