Updated html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,75 @@
     <title>Treact</title>
 </head>
 <body>
-    <section id="home__page">
+    <header>
+        <nav class="head__nav">
+            <div class="nav__logo">
+                <figure class="nav__logo">
+                    <img class="nav__logo--img" src="https://treact.owaiskhan.me/static/media/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="logo">
+                </figure>
+                <a href="" class="nav__title">Treact</a>
+            </div>
+            <div class="nav__list">
+                <ul class="nav__links">
+                   <li class="nav__link--wrap">
+                        <a href="" class="nav__link">Home</a>
+                    </li>
+                    <li class="nav__link--wrap">
+                        <a href="" class="nav__link">Blog</a>
+                    </li>
+                    <li class="nav__link--wrap">
+                        <a href="" class="nav__link">Pricing</a>
+                    </li>
+                    <li class="nav__link--wrap">
+                        <a href="" class="nav__link">Contact Us</a>
+                    </li>
+                    <li class="nav__link--wrap">
+                        <a href="" class="nav__link--sub">Login</a>
+                    </li>
+                    <li class="nav__link--wrap">
+                        <a href="" class="nav__link--primary">Sign Up</a>
+                    </li>
+                </ul>
+            </div>
+            <button class="btn__menu" onclick="">
+                <i class="fa-solid fa bars"></i>
+            </button>
+            <div class="manu__backdrop">
+                <button class="btn__menu btn__menu--close" onclick="">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
+                <ul class="menu__links">
+                    <li class="nav__link--wrap menu__list" onclick="">
+                        <a href="" class="nav__link">Home</a>
+                    </li>
+                    <li class="nav__link--wrap menu__list" onclick="">
+                        <a href="" class="nav__link">Blog</a>
+                    </li>
+                    <li class="nav__link--wrap menu__list" onclick="">
+                        <a href="#pricing" class="nav__link">Pricing</a>
+                    </li>
+                    <li class="nav__link--wrap menu__list" onclick="">
+                        <a href="" class="nav__link">Contact Us</a>
+                    </li>
+                    <li class="nav__link--wrap menu__list" onclick="">
+                        <a href="" class="nav__link--sub">Login</a>
+                    </li>
+                    <li class="nav__link--wrap menu__list" onclick="">
+                        <a href="" class="nav__link--primary">Sign Up</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section>
+            
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+    <!-- <section id="home__page">
         <div class="app">
             <nav class="nav">
                 <div class="row__nav">
@@ -97,7 +165,7 @@
                             that provide top notch security.
                         </p>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="sideimage__card">
                     <span class="imageContainer">
@@ -163,7 +231,7 @@
                         </p>
                     </div>
                 </div> -->
-            </div>
+            <!-- </div>
         </div>
     </section>
     <section id="">
@@ -190,6 +258,6 @@
         <div class="">
             
         </div>
-    </section>
+    </section> -->
 </body>
 </html>
