Updated html file

--- a/index.html
+++ b/index.html
@@ -67,10 +67,32 @@
                 </ul>
             </div>
         </nav>
+        <div class="header">
+            <div class="container">
+                <div class="row">
+                    <div class="head">
+                        <div class="head__description">
+                            <h1 class="head__title">
+                                Beautiful React Templates
+                                <span class="text--color">for you.</span>
+                            </h1>
+                            <p class="head__subtitle">
+                                Our templates are easy to setup, understand and customize. 
+                                Fully modular components with a variety of pages an components.
+                            </p>
+                            <div class="head__email--wrap">
+                                <input type="email" class="head__email" placeholder="Your email address">
+                                <button class="head__email--button">Get started</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <section>
-            
+
         </section>
     </main>
     <footer>
