--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <figure class="nav__logo">
                     <img class="nav__logo--img" src="https://treact.owaiskhan.me/static/media/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="logo">
                 </figure>
-                <a href="" class="nav__title">Treact</a>
+                <a href="#" class="nav__title">Treact</a>
             </div>
             <div class="nav__list">
                 <ul class="nav__links">
@@ -91,195 +91,25 @@
         </div>
     </header>
     <main>
-        <section>
-
+        <section id="features">
+            <div class="container">
+                <div class="row">
+                    <div class="features__description">
+                        <h5 class="section__name features__head">
+                            <span class="text-color">Features</span>
+                        </h5>
+                        <h2 class="section__title">We are amazing</h2>
+                        <p class="section__para">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit placeat, 
+                            a facere laboriosam voluptatem quod ratione voluptate et molestiae mollitia!
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
 
     </footer>
-    <!-- <section id="home__page">
-        <div class="app">
-            <nav class="nav">
-                <div class="row__nav">
-                    <a class="logo__link" href="#">
-                        <img class="logo" src="https://treact.owaiskhan.me/static/media/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="logo"> Treact 
-                    </a>
-                    <ul class="nav__links">
-                        <li>
-                            <a class="nav__link link__hover-effect" href="#about">About</a>
-                        </li>
-                        <li>
-                            <a class="nav__link link__hover-effect" href="#blog">Blog</a>
-                        </li>
-                        <li>
-                            <a class="nav__link link__hover-effect" href="#pricing">Pricing</a>
-                        </li>
-                        <li>
-                            <a class="nav__link link__hover-effect" href="#contact">Contact Us</a>
-                        </li>
-                        <li>
-                            <a class="nav__link link__hover-effect" href="#">Login</a>
-                        </li>
-                        <li>
-                            <a class="nav__link sign--up" href="#"><button class="nav__link--signup--btn">Sign Up</button></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="container">
-                <div class="row">
-                    <div class="leftcolumn__container">
-                        <div class="leftcolumn">
-                            <h1 class="title">
-                                Beautiful React Templates <span class="purple">for you.</span>
-                            </h1>
-                            <p class="TwoColumnWithInput__text">
-                                Our templates are easy to setup, understand and customize. 
-                                Fully modular components with a variety of pages and components.
-                            </p>
-                            <div class="btn">
-                                <input class="input__btn" type="text" placeholder="Your Email Adress">
-                                <button class="btn__btn" type="button">Get Started</button>
-                            </div>
-                            <div class="customer__logo">
-                                <p>
-                                    Our Trusted Customer
-                                </p>
-                                <img class="img__logo" src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="customer-logo">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="rightcolumn">
-                        <div class="illustrationcolumn">
-                            <img class="rightColumn__img" src="https://treact.owaiskhan.me/static/media/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt="illustration image">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> 
-    </section>
-    <section id="features">
-        <div class="image__container">
-            <div class="sideImage__columncontainer">
-                <h5 class="image__subheading">
-                    <span class="purple">Features</span>
-                </h5>
-                <h2 class="image__heading">
-                    We have Amazing
-                    <span class="purple">Service.</span>
-                </h2>
-                <p class="image_description">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus est repellendus minus 
-                    quisquam reprehenderit molestiae aperiam perferendis repudiandae temporibus molestias.
-                </p>
-            </div>
-            <div class="vertical__spacer"></div>
-            <div class="services">    
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
-                    </span>
-                    <div class="textcontainer">
-                        <span class="title">Secure</span>
-                        <p class="description">
-                            We strictly only deal with vendors 
-                            that provide top notch security.
-                        </p>
-                    </div>
-                </div> -->
-
-                <!-- <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
-                    </span>
-                    <div class="textcontainer">
-                        <span class="title">24/7 Support</span>
-                        <p class="description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Sit nulla quas necessitatibus consequatur iste impedit.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="">
-                    </span>
-                    <div class="textcontainer">
-                        <span class="title">Customizable</span>
-                        <p class="description">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                            A harum eum temporibus fugit fugiat debitis.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="">
-                    </span>
-                    <div class="textcontainer">
-                        <span class="title">Reliable</span>
-                        <p class="description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Accusamus alias quidem officiis recusandae iure cum!
-                        </p>
-                    </div>
-                </div>
-
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
-                    </span>
-                    <div class="textcontainer">
-                        <span class="title">Fast</span>
-                        <p class="description">
-                            We strictly only deal with vendors 
-                            that provide top notch security.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="sideimage__card">
-                    <span class="imageContainer">
-                        <img src="https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
-                    </span>
-                    <div class="textcontainer">
-                        <span class="title">Easy</span>
-                        <p class="description">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Ipsum, consequatur obcaecati amet deleniti eos quod.
-                        </p>
-                    </div>
-                </div> -->
-            <!-- </div>
-        </div>
-    </section>
-    <section id="">
-        <div class="">
-
-        </div>
-    </section>
-    <section id="">
-        <div class="">
-
-        </div>
-    </section>
-    <section id="">
-        <div>
-
-        </div>
-    </section>
-    <section id="">
-        <div class="">
-
-        </div>
-    </section>
-    <section id="">
-        <div class="">
-            
-        </div>
-    </section> -->
 </body>
 </html>
