--- a/index.html
+++ b/index.html
@@ -104,6 +104,84 @@
                             a facere laboriosam voluptatem quod ratione voluptate et molestiae mollitia!
                         </p>
                     </div>
+                    <div class="features__services">
+                        <div class="features__service">
+                            <div class="features__service--wrap">
+                                <img src="https://treact.owaiskhan.me/static/media/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="features__services--img">
+                            </div>
+                            <div class="features__text--container">
+                                <span class="features__text--title">Secure</span>
+                                <p class="features__text--para">
+                                    We strictly only deal with vendors that provide top notch security.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="features__service">
+                            <div class="features__service--wrap">
+                                <img src="https://treact.owaiskhan.me/static/media/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="features__services--img">
+                            </div>
+                            <div class="features__text--container">
+                                <span class="features__text--title">24/7 Support</span>
+                                <p class="features__text--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                    Quasi necessitatibus quo dolorum iure quibusdam cupiditate cumque rem fuga? Voluptatibus, 
+                                    unde nisi harum dolores repudiandae autem sit quaerat quod mollitia qui.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="features__service">
+                            <div class="features__service--wrap">
+                                <img src="https://treact.owaiskhan.me/static/media/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="features__services--img">
+                            </div>
+                            <div class="features__text--container">
+                                <span class="features__text--title">Customizable</span>
+                                <p class="features__text--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                    Veniam nulla aut ullam, error odio nemo? 
+                                    Nam possimus amet voluptatum impedit?
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="features__service">
+                            <div class="features__service--wrap">
+                                <img src="https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="features__services--img">
+                            </div>
+                            <div class="features__text--container">
+                                <span class="features__text--title">Reliable</span>
+                                <p class="features__text--para">
+                                    We strictly only deal with vendors that provide top notch security.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="features__service">
+                            <div class="features__service--wrap">
+                                <img src="https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="features__services--img">
+                            </div>
+                            <div class="features__text--container">
+                                <span class="features__text--title">Fast</span>
+                                <p class="features__text--para">
+                                    We strictly only deal with vendors that provide top notch security.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="features__service">
+                            <div class="features__service--wrap">
+                                <img src="https://treact.owaiskhan.me/static/media/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" alt="features__services--img">
+                            </div>
+                            <div class="features__text--container">
+                                <span class="features__text--title">Easy</span>
+                                <p class="features__text--para">
+                                    We strictly only deal with vendors that provide top notch security.
+                                </p>
+                            </div>
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </section>
