--- a/index.html
+++ b/index.html
@@ -213,7 +213,52 @@
         </section>
         <!-- steps -->
         <section id="step">
+            <div class="container">
+                <div class="row steps__container">
+                    <div class="steps__img--wrap">
+                        <img src="https://treact.owaiskhan.me/static/media/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+                    </div>
+                    <div class="steps__description">
+                        <h5 class="section__name">Steps</h5>
+                        <h2 class="section__title work__title">
+                            Easy to
+                            <span class="text--color">Get started</span>
+                        </h2>
+                        <div class="steps__list">
+                            <div class="steps__path">
+                                <div class="steps__path--number">01</div>
+                                <div class="steps__path--text">
+                                    <h2 class="steps__path--title">Register</h2>
+                                    <p class="steps__path--paragraph">
+                                        Create an account with us using Google or Facebook.
+                                    </p>
+                                </div>
+                            </div>
 
+                            <div class="steps__path">
+                                <div class="steps__path--number">02</div>
+                                <div class="steps__path--text">
+                                    <h2 class="steps__path--title">Download</h2>
+                                    <p class="steps__path--paragraph">
+                                        Browse and Download the template that you like from the marketplace.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="steps__path">
+                                <div class="steps__path--number">01</div>
+                                <div class="steps__path--text">
+                                    <h2 class="steps__path--title">Register</h2>
+                                    <p class="steps__path--paragraph">
+                                        Create an account with us using Google or Facebook.
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- values -->
