Updated html file

--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
                             </div>
 
                             <div class="steps__path">
-                                <div class="steps__path--number">01</div>
+                                <div class="steps__path--number">03</div>
                                 <div class="steps__path--text">
-                                    <h2 class="steps__path--title">Register</h2>
+                                    <h2 class="steps__path--title">Run</h2>
                                     <p class="steps__path--paragraph">
-                                        Create an account with us using Google or Facebook.
+                                        Follow instructions to setup and customize the template to your needs.
                                     </p>
                                 </div>
                             </div>
@@ -263,7 +263,51 @@
 
         <!-- values -->
         <section id="values">
+            <div class="row work__container">
+                <div class="value__description">
+                    <h5 class="section__name">Value</h5>
+                    <h2 class="section__title work__title">
+                        We Always Abide by
+                        <span class="text--color">Our Principles.</span>
+                    </h2>
+                    <p class="section__para">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Aliquam voluptate illo aperiam hic, ipsam error reprehenderit ea 
+                        delectus provident amet.
+                    </p>
+                    <div class="values__reasons">
+                        <div class="values__reason">
+                            <div class="values__reasons--head">
+                                <figure class="dollar">
+                                    <i class="fa-solid fa-dollar-sign dollar-sign">
+                                        
+                                    </i>
+                                </figure>
+                                <h3 class="values__reason--title">Affordable</h3>
+                            </div>
+                            <p class="values__reason--paragraph">
+                                We promise to offer you the best rate we can 
+                                - at par with the industry standard.
+                            </p>
+                        </div>
 
+                        <div class="values__reason">
+                            <div class="values__reasons--head">
+                                <figure class="dollar">
+                                    <i class="fa-solid fa-dollar-sign dollar-sign">
+                                        
+                                    </i>
+                                </figure>
+                                <h3 class="values__reason--title">Affordable</h3>
+                            </div>
+                            <p class="values__reason--paragraph">
+                                We promise to offer you the best rate we can 
+                                - at par with the industry standard.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section id="pricing">
