Updated html file

--- a/index.html
+++ b/index.html
@@ -298,13 +298,19 @@
                                         
                                     </i>
                                 </figure>
-                                <h3 class="values__reason--title">Affordable</h3>
+                                <h3 class="values__reason--title">Professionalism</h3>
                             </div>
                             <p class="values__reason--paragraph">
-                                We promise to offer you the best rate we can 
-                                - at par with the industry standard.
+                                We assure you that our templates are designed 
+                                and created by professional designers.
                             </p>
                         </div>
+                        <button class="section__button">
+                            <a href="#" class="section__button--link">Learn More</a>
+                        </button>
+                    </div>
+                    <div class="values__img--wrap">
+                        <img src="https://treact.owaiskhan.me/static/media/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="" class="values__img">
                     </div>
                 </div>
             </div>
@@ -383,7 +389,6 @@
                             <hr>
                             <button type="button">Buy now</button>
                         </div>
-                        
                     </div>
                 </div>
             </div>
@@ -444,7 +449,26 @@
 
             </div>
             <div class="footer__description">
+                <div class="footer__logo">
+                    <figure class="footer__logo">
+                        <img src="https://treact.owaiskhan.me/static/media/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="" class="footer__logo--img">
+                    </figure>
+                    <a href="#" class="footer__title">Treact</a>
+                </div>
+                <div class="footer__copyright">@ 2018 Treact Inc. All Rights Reserved.</div>
+                <div class="footer__media--wrap">
+                    <a href="#" class="footer__media">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
 
+                    <a href="#" class="footer__media">
+                        <i class="fa-brands fa-instragram"></i>
+                    </a>
+
+                    <a href="#" class="footer__media">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </footer>
