Updated html file

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="container">
                 <div class="row">
                     <div class="features__description">
-                        <h5 class="section__name features__head">
+                        <h5 class="features__name features__head">
                             <span class="text-color">Features</span>
                         </h5>
                         <h2 class="section__title">We are amazing</h2>
@@ -190,8 +190,8 @@
             <div class="container">
                 <div class="row work__container">
                     <div class="work__description">
-                        <h5 class="section__name">Quality Work</h5>
-                        <h2 class="section__title work__title">
+                        <h5 class="qualitywork__name">Quality Work</h5>
+                        <h2 class="qualitywork__title work__title">
                             Designed & Developed by
                             <span class="text--color">Professional</span>
                         </h2>
@@ -219,8 +219,8 @@
                         <img src="https://treact.owaiskhan.me/static/media/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
                     </div>
                     <div class="steps__description">
-                        <h5 class="section__name">Steps</h5>
-                        <h2 class="section__title work__title">
+                        <h5 class="steps__name">Steps</h5>
+                        <h2 class="steps__title work__title">
                             Easy to
                             <span class="text--color">Get started</span>
                         </h2>
@@ -265,8 +265,8 @@
         <section id="values">
             <div class="row work__container">
                 <div class="value__description">
-                    <h5 class="section__name">Value</h5>
-                    <h2 class="section__title work__title">
+                    <h5 class="value__name">Value</h5>
+                    <h2 class="value__title work__title">
                         We Always Abide by
                         <span class="text--color">Our Principles.</span>
                     </h2>
@@ -317,8 +317,8 @@
         </section>
 
         <section id="pricing">
-            <div class="container">
-                <div class="row">
+            <div class="pricing__container">
+                <div class="row row__pricing">
                     <div class="plans">
                         <div class="plan__description">
                             <h5 class="pricing features__head">
@@ -393,8 +393,16 @@
                 </div>
             </div>
         </section>
+
+        <section id="testimonials">
+            <div class="container">
+                <div class="row">
+                    
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
+    <footer id="footer">
         <div class="row">
             <div class="footer__container">
                 <div class="footer__links">
