Updated html file

--- a/index.html
+++ b/index.html
@@ -42,26 +42,26 @@
                 <i class="fa-solid fa bars"></i>
             </button>
             <div class="manu__backdrop">
-                <button class="btn__menu btn__menu--close" onclick="">
+                <button class="btn__menu btn__menu--close" onclick="closeMenu()">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
                 <ul class="menu__links">
-                    <li class="nav__link--wrap menu__list" onclick="">
+                    <li class="nav__link--wrap menu__list" onclick="closeMenu()">
                         <a href="" class="nav__link">Home</a>
                     </li>
-                    <li class="nav__link--wrap menu__list" onclick="">
+                    <li class="nav__link--wrap menu__list" onclick="closeMenu()">
                         <a href="" class="nav__link">Blog</a>
                     </li>
-                    <li class="nav__link--wrap menu__list" onclick="">
+                    <li class="nav__link--wrap menu__list" onclick="closeMenu()">
                         <a href="#pricing" class="nav__link">Pricing</a>
                     </li>
-                    <li class="nav__link--wrap menu__list" onclick="">
+                    <li class="nav__link--wrap menu__list" onclick="closeMenu()">
                         <a href="" class="nav__link">Contact Us</a>
                     </li>
-                    <li class="nav__link--wrap menu__list" onclick="">
+                    <li class="nav__link--wrap menu__list" onclick="closeMenu()">
                         <a href="" class="nav__link--sub">Login</a>
                     </li>
-                    <li class="nav__link--wrap menu__list" onclick="">
+                    <li class="nav__link--wrap menu__list" onclick="closeMenu()">
                         <a href="" class="nav__link--primary">Sign Up</a>
                     </li>
                 </ul>
@@ -91,6 +91,7 @@
         </div>
     </header>
     <main>
+        <!-- features -->
         <section id="features">
             <div class="container">
                 <div class="row">
@@ -185,6 +186,7 @@
                 </div>
             </div>
         </section>
+        
         <!-- Quality work -->
         <section id="qualitywork">
             <div class="container">
@@ -211,6 +213,7 @@
                 </div>
             </div>
         </section>
+
         <!-- steps -->
         <section id="step">
             <div class="container">
@@ -316,6 +319,7 @@
             </div>
         </section>
 
+        <!-- Pricing -->
         <section id="pricing">
             <div class="pricing__container">
                 <div class="row row__pricing">
@@ -394,14 +398,42 @@
             </div>
         </section>
 
+        <!-- Testimonials -->
         <section id="testimonials">
             <div class="container">
                 <div class="row">
-                    
+                    <img src="https://treact.owaiskhan.me/static/media/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" 
+                    alt="">
+                    <div class="section__title">
+                        <h5 class="section__title">
+                            Testimonials
+                        </h5>
+                        <h2 class="section__heading">
+                            Our Clients <span class="text--color">Love Us.</span>
+                        </h2>
+                        <p class="section__description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Aliquid quo nisi dolore neque assumenda reprehenderit 
+                            sit provident ea iure enim.
+                        </p>
+                        <div class="section__slidestacker">
+                            <div class="stacklist">
+                                <div class="slick-track">
+                                    <div class="slide-stack">
+                                        <div class="slide-stack">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <!-- footer -->
     <footer id="footer">
         <div class="row">
             <div class="footer__container">
