Updated html file

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         </section>
 
         <!-- Testimonials -->
-        <section id="testimonials">
+        <!-- <section id="testimonials">
             <div class="container">
                 <div class="row">
                     <img src="https://treact.owaiskhan.me/static/media/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" 
@@ -430,7 +430,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <!-- footer -->
