Updated html file

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </nav>
         <div class="header">
             <div class="container">
-                <div class="row">
+                <div class="row row__description">
                     <div class="head">
                         <div class="head__description">
                             <h1 class="head__title">
@@ -84,6 +84,15 @@
                                 <input type="email" class="head__email" placeholder="Your email address">
                                 <button class="head__email--button">Get started</button>
                             </div>
+                            <div class="head__customer">
+                                <p class="head__customer--para">Out trusted Customer</p>
+                                <figure class="head__customer--wrap">
+                                    <img src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="" class="head__customer--img">
+                                </figure>
+                            </div>
+                            <div class="head__img--wrap">
+                                <img src="https://treact.owaiskhan.me/static/media/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt="" class="head__img">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -94,7 +103,7 @@
         <!-- features -->
         <section id="features">
             <div class="container">
-                <div class="row">
+                <div class="row row__container">
                     <div class="features__description">
                         <h5 class="features__name features__head">
                             <span class="text-color">Features</span>
@@ -181,7 +190,6 @@
                                 </p>
                             </div>
                         </div>
-                        
                     </div>
                 </div>
             </div>
