Updated html file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="head__nav">
             <div class="nav__logo">
-                <figure class="nav__logo">
+                <figure class="nav__logo--figure">
                     <img class="nav__logo--img" src="https://treact.owaiskhan.me/static/media/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="logo">
                 </figure>
                 <a href="#" class="nav__title">Treact</a>
