Updated html file

--- a/index.html
+++ b/index.html
@@ -215,8 +215,7 @@
                         </button>
                     </div>
                     <div class="work__img--wrap">
-                        <img class="work__img" src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png
-                        " alt="">
+                        <img class="work__img" src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
                     </div>
                 </div>
             </div>
